// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Step Verification Script Delegate Click back button 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
      >
        <span
          class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
          data-icon="command-artifact-check"
        >
          <svg
            height="10"
            viewBox="0 0 14 14"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2L5.7 8.4 4.1 6.9c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          delegate.successVerification.delegateInstalled
        </p>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      disabled=""
      id="stepReviewScriptBackButton"
      tabindex="-1"
      type="button"
    >
      <div
        class="bp3-spinner bp3-button-spinner"
      >
        <div
          class="bp3-spinner-animation"
        >
          <svg
            height="20"
            stroke-width="16.00"
            viewBox="-3.00 -3.00 106.00 106.00"
            width="20"
          >
            <path
              class="bp3-spinner-track"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            />
            <path
              class="bp3-spinner-head"
              d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              pathLength="280"
              stroke-dasharray="280 280"
              stroke-dashoffset="210"
            />
          </svg>
        </div>
      </div>
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate Click back button 2`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
      >
        <span
          class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
          data-icon="command-artifact-check"
        >
          <svg
            height="10"
            viewBox="0 0 14 14"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2L5.7 8.4 4.1 6.9c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          delegate.successVerification.delegateInstalled
        </p>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;

exports[`Create Step Verification Script Delegate render data 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main verificationBody"
  >
    <div
      class="Layout--vertical StyledProps--main panelLeft"
    >
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main titleYamlVerification"
          level="2"
        >
          delegate.successVerification.applyYAMLTitle
        </h2>
      </div>
      <div
        class="Layout--horizontal StyledProps--main descriptionVerificationWrapper"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description1
        </p>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-normal"
          style="--text-line-clamp: 2; width: 408px;"
        >
          delegate.successVerification.description2
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main verificationFieldWrapper"
      >
        <div
          class="StyledProps--font StyledProps--main verificationField StyledProps--intent-primary StyledProps--padding-small StyledProps--font-align-center StyledProps--flex"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-small"
            style="margin-right: 24px;"
          >
            delegate.verifyDelegateYamlCmnd
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class=""
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main copyIcon"
                  data-icon="copy-alt"
                >
                  <svg
                    fill="none"
                    height="20"
                    viewBox="0 0 8 9"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <hr
        class="verticalLine"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main checkItemsWrapper"
      >
        <span
          class="bp3-icon StyledProps--main checkIcon StyledProps--color StyledProps--color-green500"
          data-icon="command-artifact-check"
        >
          <svg
            height="10"
            viewBox="0 0 14 14"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 14c-3.9 0-7-3.1-7-7s3.1-7 7-7 7 3.1 7 7-3.1 7-7 7zm3.3-10c-.2 0-.3.1-.4.2L5.7 8.4 4.1 6.9c-.1-.2-.2-.2-.4-.2-.4 0-.7.3-.7.6 0 .2.1.4.2.5l2 2c.1.1.3.2.5.2s.3-.1.4-.2l4.7-4.7c.1-.1.2-.2.2-.4 0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          delegate.successVerification.delegateInstalled
        </p>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-xxxlarge"
  >
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon"
      id="stepReviewScriptBackButton"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-left"
      >
        <svg
          data-icon="chevron-left"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-left
          </desc>
          <path
            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        back
      </span>
    </button>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-small Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        done
      </span>
    </button>
  </div>
</div>
`;
